order update : adding weight

--- a/walkthroughs/quaoar-virtual-machine/index.html
+++ b/walkthroughs/quaoar-virtual-machine/index.html
@@ -228,7 +228,7 @@ PING 192.168.56.101 (192.168.56.101) 56(84) bytes of data.
 64 bytes from 192.168.56.101: icmp_seq=2 ttl=64 time=0.438 ms
 64 bytes from 192.168.56.101: icmp_seq=3 ttl=64 time=0.265 ms
 
---- 192.168.56.101 ping statistics ---
++++ 192.168.56.101 ping statistics +++
 3 packets transmitted, 3 received, 0% packet loss, time 2039ms
 rtt min/avg/max/mdev = 0.265/0.326/0.438/0.079 ms
 </code></pre>
@@ -323,12 +323,12 @@ _______________________________________________________________
 
 [+] Enumerating usernames ...
 [+] Identified the following 2 user/s:
-    +----+--------+--------+
+    ++++-+++++++--+++++++--+
     | Id | Login  | Name   |
-    +----+--------+--------+
+    ++++-+++++++--+++++++--+
     | 1  | admin  | admin  |
     | 2  | wpuser | wpuser |
-    +----+--------+--------+
+    ++++-+++++++--+++++++--+
 [!] Default first WordPress username 'admin' is still used
 
 [+] Finished: Mon Apr 10 12:53:54 2017
