--- a/en/about/index.html
+++ b/en/about/index.html
@@ -207,7 +207,7 @@
 
 <ul>
 <li><a href="http://www.aperikube.fr/" target="blank">Aperi&rsquo;Kube</a> - Official Aperi&rsquo;Kube&rsquo;s website.</li>
-<li><a href="https://www.aperisolve.fr/" target="blank">Aperi&rsquo;Solve</a> - Steganography tool developped by <a href="https://twitter.com/Zeecka_" target="blank">@Zeecka</a>.</li>
+<li><a href="https://www.aperisolve.fr/" target="blank">Aperi&rsquo;Solve</a> - Steganography tool developped by <a href="https://twitter.com/Zeecka_" target="blank">@Zeecka</a> (#AperiKube).</li>
 <li><a href="https://maki.bzh/" target="blank">Maki.bzh</a> - <a href="https://twitter.com/AlanMarrec1" target="blank">@Maki</a> (#Aperikube) personal blog - CTF &amp; InfoSec content.</li>
 <li><a href="http://tomtombinary.xyz/" target="blank">BinaryLabs</a> - <a href="https://twitter.com/tomtombinary" target="blank">@Tomtombinary</a> (#Aperikube) personal blog - CTF &amp; low level oriented content.</li>
 <li><a href="https://bitsdeep.com/" target="blank">BitsDeep</a> - <a href="https://twitter.com/ENOENT_" target="blank">@ENOENT</a> (#AperiKube) personal blog - CTF &amp; low level/cryptography oriented content.</li>
