--- a/fr/about/index.html
+++ b/fr/about/index.html
@@ -206,7 +206,7 @@ Apprenti Ingénieur en Sécurité des Systèmes d’Information. Intéressé par
 
 <ul>
 <li><a href="http://www.aperikube.fr/" target="blank">Aperi&rsquo;Kube</a> - Site officiel de l&rsquo;équipe Aperi&rsquo;Kube.</li>
-<li><a href="https://www.aperisolve.fr/" target="blank">Aperi&rsquo;Solve</a> - Outil de stéganographie en ligne développé par <a href="https://twitter.com/Zeecka_" target="blank">@Zeecka</a>.</li>
+<li><a href="https://www.aperisolve.fr/" target="blank">Aperi&rsquo;Solve</a> - Outil de stéganographie en ligne développé par <a href="https://twitter.com/Zeecka_" target="blank">@Zeecka</a> (#Aperikube).</li>
 <li><a href="https://maki.bzh/" target="blank">Maki.bzh</a> - Blog personnel de <a href="https://twitter.com/AlanMarrec1" target="blank">@Maki</a> (#Aperikube) - CTF et articles InfoSec.</li>
 <li><a href="http://tomtombinary.xyz/" target="blank">BinaryLabs</a> - Blog personnel de <a href="https://twitter.com/tomtombinary" target="blank">@Tomtombinary</a> (#Aperikube) - CTF et articles InfoSec orientée bas niveau.</li>
 <li><a href="https://bitsdeep.com/" target="blank">BitsDeep</a> - Blog personnel de <a href="https://twitter.com/ENOENT_" target="blank">@ENOENT</a> (#AperiKube) - CTF et articles InfoSec orientée bas niveau et cryptographie.</li>
