update titre conteneurs web

--- a/en/index.html
+++ b/en/index.html
@@ -169,7 +169,7 @@
     
       <div class="post-list__item">
         <span class="item__title--big">
-          <a href="/en/articles/web-containers-privacy/">Web containers - Deny website data share</a>
+          <a href="/en/articles/web-containers-privacy/">Web containers - Stop data sharing between websites</a>
         </span>
         <span class="item__date">
           <i class="fas fa-clock"></i> 8 min read -
