--- a/fr/index.html
+++ b/fr/index.html
@@ -169,7 +169,7 @@
     
       <div class="post-list__item">
         <span class="item__title--big">
-          <a href="/fr/articles/conteneurs-web-et-vie-privee/">Les conteneurs web - Stop data sharing between websites</a>
+          <a href="/fr/articles/conteneurs-web-et-vie-privee/">Les conteneurs web - Endiguer le partage de données entre les sites web</a>
         </span>
         <span class="item__date">
           <i class="fas fa-clock"></i> 9 min read -
