--- a/en/writeups/ecw-2018/web-intrusion/index.html
+++ b/en/writeups/ecw-2018/web-intrusion/index.html
@@ -564,7 +564,7 @@ The <code>/admin/console</code> page is unavailable and redirects to the home pa
 <p><center><img src="/img/writeups/ecw-2018/web-intrusion/ECW2018_intrusion_28.png" alt="ECW2018_intrusion_28" class="imgSize"/></center></p>
 
 <p>Flag 4 : check !!
-(For some reason, the flag was no longer present when I did the challenge again to take screenshots).</p>
+(For some reason, the flag was no longer present when I did the challenge again to take screenshots ¯_(ツ)_/¯).</p>
 
 <h2 id="conclusion-feedback">Conclusion &amp; Feedback</h2>
 
