--- a/fr/writeups/ecw-2018/web-intrusion/index.html
+++ b/fr/writeups/ecw-2018/web-intrusion/index.html
@@ -564,7 +564,7 @@ La page <code>/admin/console</code> est inaccessible et redirige vers l&rsquo;ac
 <p><center><img src="/img/writeups/ecw-2018/web-intrusion/ECW2018_intrusion_28.png" alt="ECW2018_intrusion_28" class="imgSize"/></center></p>
 
 <p>Flag 4 : check !!
-(Pour une raison que j&rsquo;ignore, le flag n&rsquo;était plus présent lorsque j&rsquo;ai refait le challenge pour prendre des screenshots).</p>
+(Pour une raison que j&rsquo;ignore, le flag n&rsquo;était plus présent lorsque j&rsquo;ai refait le challenge pour prendre des screenshots ¯_(ツ)_/¯).</p>
 
 <h2 id="conclusion-retex">Conclusion &amp; RETEX</h2>
 
