update final screen ECW

--- a/en/writeups/ecw-2018/web-intrusion/index.html
+++ b/en/writeups/ecw-2018/web-intrusion/index.html
@@ -561,7 +561,7 @@ The <code>/admin/console</code> page is unavailable and redirects to the home pa
 
 <p><center><img src="/img/writeups/ecw-2018/web-intrusion/ECW2018_intrusion_27.png" alt="ECW2018_intrusion_27" class="imgSize"/></center></p>
 
-<p><center><img src="/img/writeups/ecw-2018/web-intrusion/ECW2018_intrusion_28.png" alt="ECW2018_intrusion_28" class="imgSize"/></center></p>
+<p>I don&rsquo;t have the screenshot anymore, but accessing <code>https://web150-smartstuff.challenge-ecw.fr/admin</code> return a page containing the flag !</p>
 
 <p>Flag 4 : check !!
 (For some reason, the flag was no longer present when I did the challenge again to take screenshots ¯_(ツ)_/¯).</p>
