--- a/fr/writeups/ecw-2018/web-intrusion/index.html
+++ b/fr/writeups/ecw-2018/web-intrusion/index.html
@@ -561,7 +561,7 @@ La page <code>/admin/console</code> est inaccessible et redirige vers l&rsquo;ac
 
 <p><center><img src="/img/writeups/ecw-2018/web-intrusion/ECW2018_intrusion_27.png" alt="ECW2018_intrusion_27" class="imgSize"/></center></p>
 
-<p><center><img src="/img/writeups/ecw-2018/web-intrusion/ECW2018_intrusion_28.png" alt="ECW2018_intrusion_28" class="imgSize"/></center></p>
+<p>Je n&rsquo;ai plus la capture d&rsquo;écran sous la main, mais un accès à la page <code>https://web150-smartstuff.challenge-ecw.fr/admin</code> retourne une page contenant le flag !</p>
 
 <p>Flag 4 : check !!
 (Pour une raison que j&rsquo;ignore, le flag n&rsquo;était plus présent lorsque j&rsquo;ai refait le challenge pour prendre des screenshots ¯_(ツ)_/¯).</p>
