--- a/fr/404.html
+++ b/fr/404.html
@@ -158,6 +158,9 @@
   </div>
 </div>
 
+<script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+<noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
+
         <div class="content container">
             
 <h1>404: Page not found</h1>
