--- a/en/404.html
+++ b/en/404.html
@@ -168,5 +168,7 @@
 
         </div>
         
+    <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
     </body>
 </html>
