--- a/fr/about/index.html
+++ b/fr/about/index.html
@@ -285,5 +285,7 @@ if (!doNotTrack) {
 
 
 
+    <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
     </body>
 </html>
