--- a/fr/writeups/norzhctf-2019/game-of-pwn-norzh/index.html
+++ b/fr/writeups/norzhctf-2019/game-of-pwn-norzh/index.html
@@ -1123,5 +1123,7 @@ if (!doNotTrack) {
 
 
 
+    <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
     </body>
 </html>
