--- a/fr/writeups/tamuctf-2017/stegano-musical-bits/index.html
+++ b/fr/writeups/tamuctf-2017/stegano-musical-bits/index.html
@@ -445,5 +445,7 @@ if (!doNotTrack) {
 
 
 
+    <script async defer src="https://cdn.simpleanalytics.io/hello.js"></script>
+    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
     </body>
 </html>
