--- a/fr/writeups/norzhctf-2019/game-of-pwn-norzh/index.html
+++ b/fr/writeups/norzhctf-2019/game-of-pwn-norzh/index.html
@@ -201,7 +201,7 @@
 <li><a href="#connexion-au-réseau-interne">Connexion au réseau interne</a></li>
 <li><a href="#découverte-des-machines">Découverte des machines</a></li>
 </ul></li>
-<li><a href="#challenge-1-point-d'entrée-sur-le-domaine">Challenge 1 - Point d&rsquo;entrée sur le domaine</a>
+<li><a href="#challenge-1-entrée-sur-le-domaine">Challenge 1 - Entrée sur le domaine</a>
 
 <ul>
 <li><a href="#récupération-du-hash-netntlmv2-utilisateur">Récupération du hash NetNTLMv2 utilisateur</a></li>
@@ -434,7 +434,7 @@ IP ID Sequence Generation: Incremental
 
 <p><br/></p>
 
-<h2 id="challenge-1-point-d-entrée-sur-le-domaine">Challenge 1 - Point d&rsquo;entrée sur le domaine</h2>
+<h2 id="challenge-1-entrée-sur-le-domaine">Challenge 1 - Entrée sur le domaine</h2>
 
 <p>La première partie du challenge consiste à trouver un point d&rsquo;entrée sur le domaine Active Directory ou sur les machines Windows. Aucun identifiant n&rsquo;est connu à ce moment du challenge.</p>
 
