adding cheatsheet link

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -117,6 +117,9 @@
 			 
 		
 		</li>
+		<li>
+			<a href="https://cheatsheet.haax.fr" target="_blank">Cheasheet</a>
+		</li>
 	</ul>
 </div>
 
@@ -195,7 +198,7 @@
 
 <p><img src="/img/icons/myAvatar.png" alt="Haax_Avatar" width="200"/></p>
 
-<p>Apprentice in InfoSec Engineering. Security enthusiast, I&rsquo;m also interested in raising people awareness about privacy and good practices and I love to share knowledge. I also participate to Capture The Flag challenges as a member of <a href="https://twitter.com/aperikube?lang=fr" target="blank">Aperi&rsquo;Kube</a>.</p>
+<p>Graduated Engineer and now Cybersecurity Consultant (Pentester). Security enthusiast, especially toward offensive security and Open Sources Intelligence (OSINT), I&rsquo;m also interested in raising people awareness about privacy and good practices and I love to share knowledge. I also participate to Capture The Flag challenges as a member of <a href="https://twitter.com/aperikube?lang=fr" target="blank">Aperi&rsquo;Kube</a>.</p>
 
 <h1 id="contact">Contact</h1>
 
@@ -215,9 +218,8 @@
 <li><a href="https://bitsdeep.com/" target="blank">BitsDeep</a> - <a href="https://twitter.com/ENOENT_" target="blank">@ENOENT</a> (#AperiKube) personal blog - CTF &amp; low level/cryptography oriented content.</li>
 <li><a href="https://www.bmoine.fr" target="blank">Creased</a> - <a href="https://twitter.com/Creased_" target="blank">@Creased</a> (#Aperikube) personal website.</li>
 <li><a href="https://www.areizen.fr/" target="blank">Areizen</a> - <a href="https://twitter.com/RomainKraft" target="blank">@Areizen</a> (#AperiKube) personal blog.</li>
-<li><a href="https://thinkloveshare.blogspot.com/" target="blank">ThinkLoveShare</a> -<a href="https://twitter.com/TheLaluka" target="blank">@ThaLaluka</a> (#Aperikube) personal blog.</li>
+<li><a href="https://thinkloveshare.com/" target="blank">ThinkLoveShare</a> -<a href="https://twitter.com/TheLaluka" target="blank">@ThaLaluka</a> (#Aperikube) personal blog.</li>
 <li><a href="https://driikolu.fr/" target="blank">Driikolu</a> - <a href="https://twitter.com/driikolu" target="blank">@Driikolu</a> personal blog - System administration, Linux, CTF&hellip;</li>
-<li><a href="gouzou" target="blank">Gouz0u</a> - <a href="https://twitter.com/Gouz0u" target="blank">@Gouz0u</a> personal blog.</li>
 </ul>
 
 <h1 id="license">License</h1>
