--- a/en/walkthroughs/hackthebox/haystack/index.html
+++ b/en/walkthroughs/hackthebox/haystack/index.html
@@ -121,6 +121,9 @@ Haystack est une machine Linux catégorisée comme facile et plutôt intéressan
 			 
 		
 		</li>
+		<li>
+			<a href="https://cheatsheet.haax.fr" target="_blank">Cheasheet</a>
+		</li>
 	</ul>
 </div>
 
