--- a/en/walkthroughs/hackthebox/jarvis/index.html
+++ b/en/walkthroughs/hackthebox/jarvis/index.html
@@ -121,6 +121,9 @@ Jarvis est une machine Linux catégorisée comme facile/moyenne. L&rsquo;exploit
 			 
 		
 		</li>
+		<li>
+			<a href="https://cheatsheet.haax.fr" target="_blank">Cheasheet</a>
+		</li>
 	</ul>
 </div>
 
