--- a/en/writeups/norzhctf-2019-redhack-2019/game-of-pwn/index.html
+++ b/en/writeups/norzhctf-2019-redhack-2019/game-of-pwn/index.html
@@ -1066,7 +1066,7 @@ SMB         10.34.67.4      445    DC01             ============================
 
 <p>We are nevertheless happy to have achieved this challenge and hope that all participants appreciated it !</p>
 
-<p>Feel free to send us your feedback or questions, if necessary, via Twitter (<a href="https://twitter.com/Haaxmax" target="blank">@Haaxmax</a> and <a href="https://twitter.com/AzrakelK" target="blank">@AzrakelK</a>). For people wishing to redo the challenge, it should also be possible to give you the virtual machines, on a case-by-case basis.</p>
+<p>Feel free to send us your feedback or questions, if necessary, via Twitter (<a href="https://twitter.com/Haax9_" target="blank">@Haax9_</a> and <a href="https://twitter.com/AzrakelK" target="blank">@AzrakelK</a>). For people wishing to redo the challenge, it should also be possible to give you the virtual machines, on a case-by-case basis.</p>
   </div>
   
 
