--- a/fr/writeups/norzhctf-2019-redhack-2019/game-of-pwn/index.html
+++ b/fr/writeups/norzhctf-2019-redhack-2019/game-of-pwn/index.html
@@ -1059,7 +1059,7 @@ SMB         10.34.67.4      445    DC01             ============================
 
 <p>Nous sommes néanmoins heureux d&rsquo;avoir réalisé ce challenge et espérons que l&rsquo;ensemble des participants l&rsquo;ont apprécié !</p>
 
-<p>N&rsquo;hésitez pas nous faire part de vos retours ou vos questions, si besoin, via Twitter (<a href="https://twitter.com/Haaxmax" target="blank">@Haaxmax</a> et  <a href="https://twitter.com/AzrakelK" target="blank">@AzrakelK</a>). Pour les personnes souhaitant refaire le challenge, il devrait être également possible de vous donner les machines virtuelles, au cas par cas.</p>
+<p>N&rsquo;hésitez pas nous faire part de vos retours ou vos questions, si besoin, via Twitter (<a href="https://twitter.com/Haax9_" target="blank">@Haax9_</a> et  <a href="https://twitter.com/AzrakelK" target="blank">@AzrakelK</a>). Pour les personnes souhaitant refaire le challenge, il devrait être également possible de vous donner les machines virtuelles, au cas par cas.</p>
   </div>
   
 
