--- a/en/about/index.html
+++ b/en/about/index.html
@@ -126,7 +126,7 @@
     <p>
       <section class="social">
 	
-	<a href="https://twitter.com/Haaxmax" target="blank"><i class="fab fa-twitter fa-lg" aria-hidden="true"></i></a>
+	<a href="https://twitter.com/Haax9_" target="blank"><i class="fab fa-twitter fa-lg" aria-hidden="true"></i></a>
 	
 	
 	&nbsp;<a href="https://github.com/Haax9" target="blank"><i class="fab fa-github fa-lg" aria-hidden="true"></i></a>
@@ -202,7 +202,7 @@
 
 <h1 id="contact">Contact</h1>
 
-<p><strong>Twitter</strong> : <a href="https://twitter.com/Haaxmax" target="blank">Haax</a></p>
+<p><strong>Twitter</strong> : <a href="https://twitter.com/Haax9_" target="blank">Haax</a></p>
 
 <p><strong>Mail</strong> : haax[at]mdamail.ch</p>
 
