--- a/en/walkthroughs/hackthebox/jarvis/index.html
+++ b/en/walkthroughs/hackthebox/jarvis/index.html
@@ -130,7 +130,7 @@ Jarvis est une machine Linux catégorisée comme facile/moyenne. L&rsquo;exploit
     <p>
       <section class="social">
 	
-	<a href="https://twitter.com/Haaxmax" target="blank"><i class="fab fa-twitter fa-lg" aria-hidden="true"></i></a>
+	<a href="https://twitter.com/Haax9_" target="blank"><i class="fab fa-twitter fa-lg" aria-hidden="true"></i></a>
 	
 	
 	&nbsp;<a href="https://github.com/Haax9" target="blank"><i class="fab fa-github fa-lg" aria-hidden="true"></i></a>
